<LinearLayout android:layout_width="fill_parent"
	android:gravity="center" android:orientation="vertical"
	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
	<TextView android:text="@string/alias_title"
		android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>
	<EditText android:textSize="20sp" android:id="@+id/aliasname"
		android:paddingBottom="10dp" android:layout_width="fill_parent"
		android:layout_height="wrap_content"></EditText>
	<TextView android:text="@string/alias_body"
		android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>
	<EditText android:id="@+id/aliasbody" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_weight="1"></EditText>
	<TableLayout android:layout_width="fill_parent"
		android:stretchColumns="*" android:layout_height="wrap_content">
		<TableRow android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<Button android:text="@string/save" android:id="@+id/save"
				android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
			<Button android:text="@string/delete" android:id="@+id/delete"
				android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
		</TableRow>
	</TableLayout>
</LinearLayout>
